[package]
name = "sdr-hackrf-rs"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "HackRF One implementation of the SdrSource trait."

[dependencies]
sdr-source-rs = { git = "https://github.com/isaacbentley/sdr-source-rs.git", branch = "main" }
# Pure-Rust HackRF One driver. v0.4 talks USB via `nusb` (pure Rust),
# so there's no system C-library dependency at all — neither libhackrf
# nor libusb is required to build or run.
hackrfone = "0.4"
crossbeam = "0.8"
num-complex = "0.4"
anyhow = "1.0"
tracing = "0.1"
